--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:design:24.0.0-alpha2'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
+    compile 'me.zhanghai.android.materialprogressbar:library:1.1.6'
 }
