--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize" >
+        <activity android:name=".LoginActivity" >
             <intent-filter>
 
                 <action android:name="android.intent.action.MAIN"/>
@@ -30,7 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ApprovedListView"
+        <activity android:name=".MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" >
         </activity>
 
